[package]
name = "axum-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.4", features = ["cookie"] }
axum-test = "18.4.1"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
